# SecObserve

./: .dockerignore  .envrc  .gitignore  .semgrepignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  docker-compose-cypress.yml  docker-compose-dev-keycloak.yml  docker-compose-dev-ms.yml  docker-compose-dev-mysql.yml  docker-compose-dev.yml  docker-compose-playwright.yml  docker-compose-prod-mysql.yml  docker-compose-prod-postgres.yml  docker-compose-prod-test.yml  docker-compose-unittests.yml  flake.nix  index.html  mkdocs.yml  mkdocs_requirements.txt  renovate.json  sbom_frontend_application.json  so_configuration.yml  so_configuration_code.yml  so_configuration_endpoints.yml  so_configuration_images.yml  so_configuration_main.yml  so_configuration_sca.yml  so_configuration_sca_current.yml  so_configuration_sca_dev.yml
backend/: .coveragerc  .gitignore  .pylintrc  code_quality_requirements.txt  gunicorn.conf.py  manage.py  poetry_requirements.txt  pyproject.toml  setup.cfg  sonar-project.properties
backend/application/: __init__.py  conftest.py
backend/application/access_control/: admin.py  apps.py  models.py  signals.py
backend/application/access_control/api/: filters.py  permissions.py  permissions_base.py  serializers.py  views.py
backend/application/access_control/migrations/: 0001_initial.py  0002_user_additional_fields.py  0003_api_token_jwt_secret.py  0004_alter_api_token_api_token_hash.py  0005_user_setting_theme.py  0006_user_setting_list_properties.py  0007_user_setting_list_size.py  0008_user_oidc_groups_hash_authorization_group.py  0008_user_oidc_groups_hash_group.py  0009_user_is_oidc_user.py  0010_authorization_group_member_and_more.py  0011_user_setting_package_info_preference.py  0012_api_token_expiration_date_api_token_id_and_more.py  0013_api_token_multiple.py  0014_copy_api_tokens.py  0014_move_api_tokens.py
backend/application/access_control/queries/: api_token.py  authorization_group.py  authorization_group_member.py  user.py
backend/application/access_control/services/: api_token_authentication.py  authorization.py  current_user.py  jwt_authentication.py  jwt_secret.py  oauth2_authentication.py  oidc_authentication.py  product_api_token.py  roles_permissions.py  user_api_token.py
backend/application/authorization/api/: permissions_base.py
backend/application/authorization/services/: authorization.py  roles_permissions.py
backend/application/background_tasks/: apps.py  models.py  tasks.py  types.py
backend/application/background_tasks/api/: filters.py  serializers.py  views.py
backend/application/background_tasks/migrations/: 0001_initial.py
backend/application/background_tasks/periodic_tasks/: core_tasks.py  epss_tasks.py  import_observations_tasks.py  license_tasks.py  metrics_tasks.py
backend/application/background_tasks/services/: task_base.py
backend/application/commons/: __init__.py  admin.py  apps.py  models.py  signals.py  tasks.py  types.py  utils.py  views.py
backend/application/commons/api/: exception_handler.py  extended_ordering_filter.py  filters.py  permissions.py  serializers.py  views.py
backend/application/commons/migrations/: 0001_initial.py  0002_settings.py  0003_migrate_settings_data.py  0004_settings_feature_disable_user_login.py  0005_settings_feature_general_rules_need_approval.py  0006_settings_internal_users.py  0006_settings_risk_acceptance_expiry_crontab_hours_and_more.py  0007_settings_risk_acceptance_expiry_crontab_hours_and_more.py  0008_remove_settings_background_epss_import_crontab_hours_and_more.py  0009_settings_password_validator_attribute_similarity_and_more.py  0010_settings_feature_license_management_and_more.py  0011_rename_settings_security_gate_threshold_unkown.py  0012_alter_settings_security_gate_threshold_unknown.py  0013_notification_read.py  0013_notification_viewed.py  0014_settings_feature_automatic_osv_scanning.py  0015_settings_cvss_enrichment_max_age_years_and_more.py  0015_settings_exploit_information_max_age_years_and_more.py  0016_remove_notification_viewed_notification_and_more.py  0017_settings_periodic_task_max_entries.py  0018_settings_vex_justification_style_and_more.py
backend/application/commons/queries/: notification.py
backend/application/commons/services/: export.py  functions.py  global_request.py  log_message.py  notification.py  notifications.py  push_notifications.py  security_headers.py  send_notifications.py  tasks.py
backend/application/commons/templates/: email_exception.tpl  email_product_security_gate.tpl  email_task_exception.tpl  msteams_exception.tpl  msteams_product_security_gate.tpl  msteams_task_exception.tpl  (+3 more)
backend/application/constance/: models.py
backend/application/core/: admin.py  apps.py  models.py  signals.py  tasks.py  types.py
backend/application/epss/: apps.py  models.py  signals.py  tasks.py
backend/application/import_observations/: apps.py  exceptions.py  models.py  rpm.py  tasks.py  types.py
backend/application/issue_tracker/: apps.py  types.py
backend/application/licenses/: apps.py  models.py  signals.py  tasks.py  types.py
backend/application/metrics/: models.py  tasks.py
backend/application/notifications/: apps.py  models.py
backend/application/osv/: apps.py  models.py  types.py
backend/application/rules/: admin.py  apps.py  models.py  types.py
backend/application/vex/: admin.py  apps.py  models.py  signals.py  types.py
backend/config/: __init__.py  api_router.py  celery_app.py  schema.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  dist.py  prod.py  unittests.py
backend/requirements/: base.txt  dev.txt  prod.txt  unittests.txt
backend/unittests/: base_test_case.py
backend/unittests/access_control/: test_models.py  test_queries.py  test_signals.py
backend/unittests/core/: test_models.py
backend/unittests/fixtures/: import_observations_fixtures.json  unittests_fixtures.json  unittests_license_fixtures.json  vex_fixtures.json
backend/unittests/import_observations/: test_types.py
backend/unittests/templates/: test_robots.py
(+1419 files in other folders)
